Fixed extra padding added to form buttons

--- a/assets/styles/presto/components/_button.scss
+++ b/assets/styles/presto/components/_button.scss
@@ -3,6 +3,7 @@
 
 button {
     border: none;
+    padding: 0;
 }
 
 /* BUTTON */
